# pyro-risk-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
client/: README.md  pyproject.toml
client/pyroriskclient/: __init__.py  client.py
client/pyroriskclient.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyro_risk_api/: main.py
pyro_risk_api/api/: cameras.py  scores.py
pyro_risk_api/core/: auth.py  config.py  fwi.py  pyro_client.py
